<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mattlineback.ouichef.RecipeDownload"
    android:background="@color/colorPrimary">
     <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/title_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_recipes"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/name_recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/enter_recipe_name"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/download_recipes_button"
            android:enabled = "false"
            android:onClick="buttonClickHandler"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/download_recipe"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
        <ListView
            android:id="@+id/recipe_view_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>



