<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mattlineback.ouichef.OrderList"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:id="@+id/relative_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/button_home"
            android:padding="20dp"
            android:layout_marginTop = "5dp"
            android:layout_marginEnd="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_marginRight="50dp" />
        <TextView
            android:id="@+id/title_order_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/order_list"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/button_home"
            android:layout_toEndOf="@+id/button_home"
            android:layout_marginEnd="20dp" />
        <Button
            android:id="@+id/action_delete_all"
            style="?android:textAppearanceLarge"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/delete_list"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/title_order_list"
            android:layout_toEndOf="@+id/title_order_list"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:id="@+id/linearLayout"
        android:layout_below="@id/relative_1">
        <EditText
            android:id="@+id/add_order_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/enter_item_to_order"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/order_item_button"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorAccent"
            android:text="@string/add_item"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/order_list"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp"/>
    </LinearLayout>


</RelativeLayout>
