<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mattlineback.ouichef.PrepList"
    android:background="@color/colorPrimary">
    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/title_prep_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prep_list"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/add_prep_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/enter_item_to_prep"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/prep_item_button"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/add_item"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
        <ListView
            android:id="@+id/prep_list"
            android:layout_width="443dp"
            android:layout_height="500dp"
            android:layout_margin="8dp"
            tools:layout_editor_absoluteY="84dp"/>

        <Button
            android:id="@+id/action_delete_all"
            style="?android:textAppearanceLarge"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:text="Delete All"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
