<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mattlineback.ouichef.LoginActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="30dp"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:nextFocusDown="@+id/password"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:background="@android:color/white"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:padding="10dp"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="Login"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines = "2"
        android:text="QUI CHEF \nLOGIN"
        android:textAlignment="center"
        android:textColor = "@android:color/white"
        android:textSize = "30dp"
        android:textStyle="bold"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>