<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relative"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mattlineback.ouichef.RecipeSearch"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:id="@+id/relative_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
       >
        <Button
            android:id="@+id/button_home"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp" />
        <TextView
            android:id="@+id/title_recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/recipes"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/button_home"
            android:layout_toEndOf="@+id/button_home"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/relative_1">
        <EditText
            android:id="@+id/name_recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/enter_recipe_name"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/search_recipes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:textColor="@android:color/background_light"
            android:background="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_1"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/scaler_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter Multiplier  "
            android:inputType="number"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:background="@android:color/white"
            android:textSize="20sp"
            android:layout_marginEnd="10dp" />
        <Button
            android:id="@+id/double_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:text="Scale Recipe"
            android:padding="10dp"
            android:textColor="@android:color/background_light" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_2"
        android:layout_marginTop="20dp">
        <ListView
            android:id="@+id/recipe_title_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/recipe_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_3"
        android:layout_margin="20dp">
        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/recipe_title_layout"/>

</RelativeLayout>
